--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -17,9 +8,9 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+  align-items: left;
+  justify-content: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +19,38 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon-button {
+    color:white;
 }
+
+.icon-button:hover {
+    fill:gray;
+}
+
+.bounding-box {
+    display: inline-flex;
+    border: 2px solid black;
+    margin: 3px;
+    background-color: #21252c;
+}
+
+.bounding-box-alt {
+    display: inline-flex;
+    border: 2px solid black;
+    margin: 3px;
+    background-color: #353b46;
+}
+
+.label {
+    user-select: none;
+    margin: 0px;
+    margin-left: 5px;
+}
+
+.text-box {
+    margin: 0px;
+    margin-bottom: 5px;
+    margin-top: -3px;
+}
+  
+
