--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-
   align-items: left;
   justify-content: left;
   font-size: calc(10px + 2vmin);
@@ -27,18 +26,32 @@
     fill:gray;
 }
 
-.bounding-box {
+.bounding-box-effect {
+    display: inline-flex;
+    border: 2px solid black;
+    margin: 3px;
+    background-color: #4b5564;
+}
+
+.bounding-box-condition {
     display: inline-flex;
     border: 2px solid black;
     margin: 3px;
     background-color: #21252c;
 }
 
-.bounding-box-alt {
+.bounding-box-condition-alt {
     display: inline-flex;
     border: 2px solid black;
     margin: 3px;
-    background-color: #353b46;
+    background-color: #292e36;
+}
+
+.bounding-box-filter {
+    display: inline-flex;
+    border: 2px solid black;
+    margin: 3px;
+    background-color: #111216;
 }
 
 .label {
@@ -51,6 +64,7 @@
     margin: 0px;
     margin-bottom: 5px;
     margin-top: -3px;
+    margin-right: 5px;
 }
   
 
