--- a/src/App.css
+++ b/src/App.css
@@ -60,11 +60,17 @@
     font-size: 18px;
 }
 
-.text-box {
-    margin: 0px;
-    margin-bottom: 5px;
+.condition-note {
+    user-select: none;
+    font-size: 15px;
+    margin: 5px;
     margin-top: -3px;
-    margin-right: 5px;
+    white-space: pre-line;
+}
+
+.input-item {
+    margin: 5px;
+    margin-top: -3px;
 }
   
 
