Restyled navbar and implemented page selection

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,16 @@
     width: 20px;
 }
 
+.command-output {
+    display: inline-flex;
+    border: 2px solid black;
+    margin: 3px;
+}
+
+.command-text {
+    margin: 3px;
+}
+
 
   
 
