--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,8 @@
 /* Style the tab */
 .tab {
 	overflow: hidden;
-	border: 2px solid #ccc;
-	background-color: #f1f1f1;
+	border: 2px solid black;
+	background-color: none;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -12,24 +12,18 @@
 	border: none;
 	outline: none;
 	cursor: pointer;
-	padding: 14px 16px;
+    color:white;
+    font-size: 20;
+	padding: 8px 16px;
 	transition: 0.3s;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-	background-color: #ddd;
+	background-color: #363d47;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-	background-color: #ccc;
-}
-
-/* Style the tab content */
-.tab-content {
-	display: none;
-	padding: 6px 12px;
-	border: 2px solid #ccc;
-	border-top: none;
+	background-color: #4b5564;
 }
