--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   justify-content: left;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 8px;
 }
 
 .App-link {
@@ -88,6 +89,13 @@
     margin: 3px;
 }
 
+p {
+    font-size: 18px;
+}
 
+a {
+    font-size: 18px;
+    color: #bebdb2;
+}
   
 
