--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,10 @@
 /* Style the tab */
 .tab {
 	overflow: hidden;
-	border: 2px solid black;
-	background-color: none;
+	background-color: #111216;
+    position: sticky;
+    position:-webkit-sticky;
+    top:0px;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -14,8 +16,9 @@
 	cursor: pointer;
     color:white;
     font-size: 20;
-	padding: 8px 16px;
+	padding: 16px 16px;
 	transition: 0.3s;
+    font-size: 16px;
 }
 
 /* Change background color of buttons on hover */
