--- a/src/App.css
+++ b/src/App.css
@@ -97,5 +97,11 @@ a {
     font-size: 18px;
     color: #bebdb2;
 }
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+}
   
 
