--- a/src/App.css
+++ b/src/App.css
@@ -28,53 +28,10 @@
     fill:gray;
 }
 
-.bounding-box-effect {
-    display: inline-flex;
-    border: 2px solid black;
-    margin: 3px;
-    background-color: #4b5564;
-}
-
-.bounding-box-condition {
-    display: inline-flex;
-    border: 2px solid black;
-    margin: 3px;
-    background-color: #21252c;
-}
-
-.bounding-box-condition-alt {
-    display: inline-flex;
-    border: 2px solid black;
-    margin: 3px;
-    background-color: #292e36;
-}
-
-.bounding-box-filter {
-    display: inline-flex;
-    border: 2px solid black;
-    margin: 3px;
-    background-color: #111216;
-}
-
 .label {
     user-select: none;
     margin: 0px;
     margin-left: 5px;
-}
-
-.condition-label {
-    user-select: none;
-    margin: 0px;
-    margin-left: 5px;
-    font-size: 18px;
-}
-
-.condition-note {
-    user-select: none;
-    font-size: 15px;
-    margin: 5px;
-    margin-top: -3px;
-    white-space: pre-line;
 }
 
 .input-item {
@@ -108,7 +65,8 @@ option:disabled{
 }
 
 .command-text {
-    margin: 3px;
+    margin-top: 0px;
+    float:left;
 }
 
 p {
@@ -125,73 +83,3 @@ h2 {
     margin-bottom: 10px;
     margin-top: 25px;
 }
-
-.enchantment-number {
-    padding: 2px;
-    overflow: hidden;
-    background-color: #596677;
-    height: 100%;
-    width: 45px;
-    display: inline;
-    color: white;
-    border-radius:2em;
-    transition: all 0.1s;
-    border-color: #b2bfcf;
-}
-
-.enchantment-number-faded {
-    padding: 2px;
-    overflow: hidden;
-    background-color: #404955;
-    height: 100%;
-    width: 45px;
-    display: inline;
-    color: white;
-    border-radius:2em;
-    transition: all 0.1s;
-    border-color: #b2bfcf;
-}
-
-.enchantment-number-selected {
-    padding: 4px;
-    overflow: hidden;
-    background-color: #15171b;
-    height: 100%;
-    width: 45px;
-    display: inline;
-    color: white;
-    transition: all 0.1s;
-}
-
-.enchantment-label {
-    padding: 4px;
-    user-select: none;
-    overflow: hidden;
-    height: 100%;
-    width: 190px;
-    display: inline-block;
-    font-size: 20px;
-    vertical-align: middle;
-    text-align: right;
-}
-
-.stored-item {
-    padding: 5px;
-    overflow: hidden;
-    background-color: #596677;
-    display: inline;
-    color: white;
-    border-radius:0.5em;
-    border-color: #b2bfcf;
-}
-.stored-item-delete {
-    padding: 5px;
-    overflow: hidden;
-    background-color: #596677;
-    display: inline;
-    color: white;
-    width: 30px;
-    border-radius:0.5em;
-    border-color: #b2bfcf;
-}
-
