--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ option:disabled{
 
 p {
     font-size: 18px;
+    white-space: pre-line;
 }
 
 a {
@@ -84,4 +85,5 @@ h2 {
     font-size: 24px;
     margin-bottom: 10px;
     margin-top: 25px;
+    user-select: none;
 }
