--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,10 +24,10 @@
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-	background-color: #363d47;
+	background-color: #4b5564;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-	background-color: #4b5564;
+	background-color: #282c34;
 }
