--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
     user-select: none;
     margin: 0px;
     margin-left: 5px;
+    margin-top: 10px;
 }
 
 .input-item {
@@ -42,7 +43,7 @@
 }
 
 .input-box-long {
-    width: 280px
+    width: 280px;
 }
 
 .input-box-lore {
